static/css/style.css
:root {
  --primary-light: rgb(245, 245, 245);
  --primary-grey: rgb(210, 215, 211);
  --neon-green: rgb(57, 255, 20);
  --neon-blue-glow: 0 0 10px 5px #48abe0;
}

/* GLOBAL */
.bg-custom {
  background: var(--primary-light);
}

.nav-link {
  position: relative;
  text-transform: capitalize;
}

.nav-link::after {
  content: "";
  transition: all 450ms;
  opacity: 0;
  height: 2px;
  width: 80%;
  background-color: greenyellow;
  position: absolute;
  bottom: 0;
  left: 10%;
}

.nav-link:hover::after {
  opacity: 1;
}

i {
  /* margin-right: 5px; */
}

body {
  background: black;
  background: linear-gradient(270deg, #000000, #434343);
}

main {
  min-height: 80vh;
}

img {
  aspect-ratio: 1;
  object-fit: cover;
}

/* POST DETAIL */

.category {
  width: fit-content;
  background-color: #48abe0;
  color: white;
  padding: 0.25rem 1rem;
  border-radius: 10px;
}

.img-post img {
  object-fit: fill;
  position: relative;
  overflow: hidden;
  max-height: 500px;
  margin-bottom: 30px;
  width: 100%;
}

.author {
  padding-top: 1rem;
  border-bottom: 1px solid var(--primary-light);
  display: flex;
  gap: 0.5rem;
}

.author-body {
  display: flex;
  flex-direction: column;
}

.avatar {
  width: 50px;
  height: 50px;
  overflow: hidden;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  border: 1px solid black;
}

.popular-posts {
  padding: 1rem;
  border: 1px solid var(--primary-grey);
  border-radius: 0.5rem;
  transition: 300ms;
}

.popular-posts:hover,
.popular-posts:focus {
  filter: brightness(0.9);
  background: var(--primary-light);
  transform: scale(0.998);
  border: 1px solid #48abe0;
}
/* PROFILE */

.profile-icon {
  font-size: 6rem;
  text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
    -1px 1px 0 #000, 1px 1px 0 #000;
}

.gold {
  color: goldenrod;
  stroke-width: 1px;
  stroke: #000000;
}

.btn-like {
  color: #e84610;
  border: none;
  background: transparent;
}

/* SOCIALS */

.twitter:hover,
.twitter:focus {
  transition: all 0.2s;
  transform: scale(1.1);
  filter: brightness(1.1);
  cursor: pointer;
  color: white !important;
  background: linear-gradient(45deg, #1da1f2, #0d90e0);
  /* background: -webkit-radial-gradient(45deg, #1da1f2, #0d90e0);
  background: -moz-radial-gradient(45deg, #1da1f2, #0d90e0);
  background: -o-radial-gradient(45deg, #1da1f2, #0d90e0); */
}

.facebook:hover,
.facebook:focus {
  transition: all 0.2s;
  transform: scale(1.1);
  filter: brightness(1.1);
  cursor: pointer;
  color: white !important;
  background-color: #2b4170;
  background: -moz-linear-gradient(top, #3b5998, #2b4170);
  background: -ms-linear-gradient(top, #3b5998, #2b4170);
  background: -webkit-linear-gradient(top, #3b5998, #2b4170);
}

.instagram:hover,
.instagram:focus {
  transition: all 0.2s;
  transform: scale(1.1);
  filter: brightness(1.1);
  cursor: pointer;
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  color: white !important;
}

.google:hover,
.google:focus {
  transition: all 0.2s;
  transform: scale(1.1);
  filter: brightness(1.1);
  cursor: pointer;
  background: linear-gradient(-120deg, #4285f4, #34a853, #fbbc05, #ea4335);
  color: white !important;
}

/* ANIMATIONS */

.fade-in {
  opacity: 0;
  animation-name: fade-in;
  animation-duration: 500ms;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards;
}

@keyframes fade-in {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/*FORMS*/

.signup,
.login {
  text-align: center;
  padding: 2rem;
  border-radius: 10px;
  background-color: var(--primary-light);
  box-shadow: var(--neon-blue-glow);
}

.logout:hover {
  background: var(--neon-green);
}

